<resources>
    <string name="app_name">Alfa3</string>
    <string name="login">Login</string>
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="masuk_akun">Masuk</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrasi">Registrasi</string>
    <string name="nomor">Nomor</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="data_transaction">Data Transaction</string>
    <string name="data_product">Data Product</string>
    <string name="data_user">Data User</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="bubur_besar">BUBUR BESAR</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="bubur_kecil">Bubur Kecil</string>
    <string name="tim_besar">Tim Besar</string>
    <string name="tim_kecil">Tim Kecil</string>
    <string name="pudding">Pudding</string>
    <string name="detail">Detail</string>
    <string name="selesai">Selesai</string>
</resources>
