<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".user.log.login.RegisterActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="346dp"
        android:layout_height="582dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:alpha="0.7"
        android:background="@drawable/shape_form_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">


        <TextView
            android:id="@+id/textView12"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="37dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="193dp"
            android:text="Nama Lengkap" />

        <EditText
            android:id="@+id/et_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="37dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="105dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_nama"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="38dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="236dp"

            android:text="@string/username" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView14"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="38dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="104dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_username"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="39dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="225dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView13"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="38dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="104dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="245dp"
            android:text="@string/nomor" />

        <EditText
            android:id="@+id/et_nomor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView15"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="41dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="101dp"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_below="@+id/et_nomor"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="74dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="147dp"
            android:background="@drawable/shape_rectangle_white"
            android:text="Daftar"
            android:textColor="#000" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="33dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="101dp"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="140dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="121dp"
        android:text="@string/registrasi"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>